--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "monove",
     "displayName": "monove",
     "description": "Monove = Monochrome + Love",
+    "publisher": "0xdhrv",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.56.0"
