--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "engines": {
         "vscode": "^1.56.0"
     },
+    "repository": {
+        "url": "https://github.com/0xdhrv/monove-vscode-color-theme.git",
+        "type": "git"
+    },
     "categories": [
         "Themes"
     ],
